<resources>
    <string name="app_name" translatable="false">Coroutines</string>

    <!-- Preferences Key -->
    <string name="preference_key_language" translatable="false">language</string>

    <!-- Arrays -->
    <string-array name="languages_key">
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <string-array name="languages_value" translatable="false">
        <item>en</item>
        <item>es</item>
    </string-array>

    <!-- Title -->
    <string name="title_search_movie_fragment">Search Movie</string>
    <string name="title_settings_fragment">Settings</string>
    <string name="title_information">Information</string>
    <string name="title_preferences_language">Language</string>

    <!-- Text -->
    <string name="text_results">Results</string>
    <string name="text_search_movie">Search movie</string>
    <string name="text_image_description">Image description</string>
    <string name="text_loading">Loading&#8230;</string>
    <string name="text_title">Title</string>
    <string name="text_overview">Overview</string>
    <string name="text_detail">Detail</string>
    <string name="text_question_sure_reset">Are you sure to reset data?</string>
    <string name="text_empty">Empty</string>
    <string name="text_preferences_language">Define the application language</string>

    <!-- Dialogs -->
    <!-- Success -->
    <string name="success_title">Exitoso</string>

    <string name="success_msg_database_query">The database query was successful.</string>

    <!-- Error -->
    <string name="error_title_alert">Alert</string>
    <string name="error_title_error">Error</string>

    <string name="error_msg_empty_field">Empty field</string>
    <string name="error_msg_default">An error has occurred, try again</string>
    <string name="error_msg_http_internal_error">Internal server error</string>
    <string name="error_msg_http_not_found">Page not found</string>
    <string name="error_msg_data_empty">Data empty</string>
    <string name="error_msg_internet">No internet connection</string>
    <string name="error_msg_database_query">The database query failed.</string>

    <!-- Content -->
    <string name="image_description">Image Content Description</string>

    <!-- Button -->
    <string name="action_back">Back</string>
    <string name="action_next">Next</string>
    <string name="action_empty_shopping_cart">Empty shopping cart</string>
    <string name="action_filter">Filter</string>
    <string name="action_reset">Reset</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
</resources>