<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/nav_graph" app:startDestination="@id/dashboardFragment">

    <fragment
            android:id="@+id/mainFragment"
            android:name="com.athorfeo.source.app.ui.main.MainFragment"
            android:label="@string/title_search_movie_fragment"/>

    <fragment
            android:id="@+id/settingsFragment"
            android:name="com.athorfeo.source.app.ui.settings.SettingsFragment"
            android:label="@string/title_settings_fragment" />
    <fragment
        android:id="@+id/customFragment"
        android:name="com.athorfeo.source.app.ui.custom.CustomFragment"
        android:label="CustomFragment" />
    <fragment
        android:id="@+id/cameraXFragment"
        android:name="com.athorfeo.source.app.ui.cameraX.CameraXFragment"
        android:label="CameraXFragment" />
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.athorfeo.source.app.ui.dashboard.DashboardFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_dashboardFragment_to_customFragment"
            app:destination="@id/customFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_cameraXFragment"
            app:destination="@id/cameraXFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_dialogsFragment"
            app:destination="@id/dialogsFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/to_cameraOldFragment"
            app:destination="@id/cameraOldFragment" />
    </fragment>
    <fragment
        android:id="@+id/dialogsFragment"
        android:name="com.athorfeo.source.app.ui.dialogs.DialogsFragment"
        android:label="DialogsFragment" />
    <fragment
        android:id="@+id/cameraOldFragment"
        android:name="com.athorfeo.source.app.ui.cameraOld.CameraOldFragment"
        android:label="Camera Old" />
</navigation>